--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ main #listAlunos {
     max-height: 70rem;
     overflow-y: auto;
     margin-top: -5rem;
+    display: none;
 }
 
 main #listAlunos .alunoSection {
@@ -128,10 +129,55 @@ main #listAlunos .alunoSection p {
 }
 
 #listAlunos::-webkit-scrollbar-thumb:hover {
-    background-color: #ff5e00; /* Cor ao passar o mouse */
+    background-color: #ff5e00;
 }
 
 #listAlunos {
     scrollbar-width: auto;
     scrollbar-color: #ff9100 #f1f1f1;
+}
+
+.pop-out {
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    padding: 1.5rem;
+    background-color: #ff5e00;
+    color: #ffffff;
+    border-radius: 0.5rem;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.2);
+    font-size: 1.6rem;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    z-index: 1000;
+    font-size: 2.4rem;
+}
+
+.progress-bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 0.5rem;
+    background-color: black;
+    width: 100%;
+    transform-origin: left;
+    animation: progress 3s linear forwards;
+}
+
+@keyframes progress {
+    from {
+        width: 100%;
+    }
+    to {
+        width: 0;
+    }
+}
+
+.pop-out.show {
+    opacity: 1;
+    transform: translateX(0);
+}
+.hidden {
+    display: none;
 }
